--- a/_config.yml
+++ b/_config.yml
@@ -14,17 +14,22 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Higglety Pigglety
-email: higglet-pigglety.co.uk
+email: info@higglety-pigglety.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  We sell fabric, wool and haberdashery; crafts; baby and kids wear including kilts and tartan dresses; cards and gifts including locally made items; Scottish Gifts; Souvenirs, and stationary. We make curtains, blinds, cushions, and other soft furnishings for the home. We will reupholster or give furniture a makeover. We do clothing alterations and repairs.
 domain: higglet-pigglety.co.uk       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://higglet-pigglety.co.uk  # the base hostname and protocol for your site, e.g. http://example.com
+url: https://www.higglet-pigglety.co.uk  # the base hostname and protocol for your site, e.g. http://example.com
 baseurl: "" # place folder name if the site is served in a subfolder
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
-#github_username:  jekyll
+
+# Folder locations for images and thumbnails 
+imagesurl: "/assets/images/"
+thumbsurl: "/assets/thumbs/"
+
+# Footer content
+copyright: © 2024. All rights reserved 
+# Social media links
+facebook_username: HiggletyPiggletyShop 
+
 
 # Build settings
 markdown: kramdown
